--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "moduleResolution": "node",
         "target": "es2018",
-        "module": "commonjs"
+        "module": "commonjs",
+        "declaration": true
     },
     "include": [
         "src/**/*"
