--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "party-parrots",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Generate parrots based on images",
   "main": "./src/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Exanlv/Bread.git"
+    "url": "git+https://github.com/Exanlv/Parrot-generator"
   },
   "keywords": [
     "parrot",
